--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,21 +2,14 @@
 <html>
 <head>
   <title>EVENTNXT</title>
-  <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">-->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD15UtHa0mICshgHLTfDPXj8IUCpTCB7MY&libraries=places&callback=initMap" data-turbolinks-eval="false"></script> <!-- GMAP API -->
-  
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.6/umd/popper.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-  
   <%= csrf_meta_tags %>
-
-
+  <%= stylesheet_link_tag    'application', media: 'all' %>
+  <%= javascript_importmap_tags %>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD15UtHa0mICshgHLTfDPXj8IUCpTCB7MY&libraries=places&callback=initMap" data-turbolinks-eval="false"></script> <!-- GMAP API -->
 </head>
 <body>
+  <iframe name="dummyframe" id="dummyframe" style="display: none;"></iframe>
+
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e6ccff;">
     <h1 class="title">EVENTNXT</h1>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,12 +51,10 @@
 </nav>
 
   
-  <div class="container" >
+  <main class='d-flex justify-content-center vh-100'>
     <%# Render "flash" messages in our application. This loads _flash.erb %>
-    <%= render 'layouts/flash' %>
-    <main id="main">
-      <%= yield %>
-    </main>
-  </div>
+    <%# <%= render 'layouts/flash' %>
+    <%= yield %>
+  </main>
 </body>
 </html>
